--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,26 @@ sysinfo.txt
 
 # Builds
 *.unitypackage
+Temas Selectos/Assets/Modelos/Materiales.meta
+3DMax/3DMax.mxp
+3DMax/autoback/AutoBackup01.max
+3DMax/autoback/AutoBackup02.max
+3DMax/autoback/AutoBackup03.max
+3DMax/scenes/carrusel.max
+Export/carrusel.fbx
+Temas Selectos/Assets/Modelos.meta
+Temas Selectos/Assets/Modelos/carrusel.fbx
+Temas Selectos/Assets/Modelos/carrusel.fbx.meta
+Temas Selectos/Assets/Modelos/Materiales/Material #52.mat
+Temas Selectos/Assets/Modelos/Materiales/Material #52.mat.meta
+Temas Selectos/Assets/Modelos/Materiales/Material #53.mat
+Temas Selectos/Assets/Modelos/Materiales/Material #53.mat.meta
+Temas Selectos/Assets/Modelos/Texturas.meta
+Temas Selectos/Assets/Modelos/Texturas/Bosque 3.jpg
+Temas Selectos/Assets/Modelos/Texturas/Bosque 3.jpg.meta
+Temas Selectos/Assets/Modelos/Texturas/Bosque.jpg
+Temas Selectos/Assets/Modelos/Texturas/Bosque.jpg.meta
+Temas Selectos/ProjectSettings/EditorBuildSettings.asset
+Temas Selectos/ProjectSettings/ProjectSettings.asset
+Texturas/Bosque 3.jpg
+Texturas/Bosque.jpg
