--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,5 @@ Texturas/Bosque 3.jpg
 Texturas/Bosque.jpg
 Temas Selectos/Ejecutables/Practica4.apk
 Temas Selectos/Assets/Videos/Mar Mediterraneo Espigon GrupoAudiovisual Video 360 grados.mp4
+Videos/Video_Proyecto_Final.mp4
+Videos/Video_Proyecto_Final2.mp4
